--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "contacts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Don1k1337.github.io/react_contact-book",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
